--- a/application/admin/view/branch/edit.html
+++ b/application/admin/view/branch/edit.html
@@ -137,8 +137,13 @@ layui.use(['form','layer'], function(){
 		$.post('/admin/branch/editBranch', params, function(data){
             var res = data.data;
             if(data.code == 200){
-                x_admin_close();
-				parent.location.reload();
+                layer.msg('修改成功',{
+					icon:1,
+					time:1000
+				},function(){
+					x_admin_close();
+					parent.location.reload();
+				});
             }else{
                 layer.msg(data.msg);
             }
