--- a/application/admin/view/branch/add.html
+++ b/application/admin/view/branch/add.html
@@ -131,8 +131,13 @@ layui.use(['form','layer'], function(){
 		$.post('/admin/branch/addBranch', params, function(data){
             var res = data.data;
             if(data.code == 200){
-                x_admin_close();
-				parent.location.reload();
+				layer.msg('添加成功',{
+					icon:1,
+					time:1000
+				},function(){
+					x_admin_close();
+					parent.location.reload();
+				});
             }else{
                 layer.msg(data.msg);
             }
