--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -41,12 +41,11 @@
         <a href="javascript:;">{:session('username')}</a>
         <dl class="layui-nav-child">
           <!-- 二级菜单 -->
-          <dd><a onclick="x_admin_show('个人信息','http://www.baidu.com')">个人信息</a></dd>
-          <dd><a onclick="x_admin_show('切换帐号','http://www.baidu.com')">切换帐号</a></dd>
+          <dd><a href="{:url('admin/user/logout')}">切换帐号</a></dd>
           <dd><a href="{:url('admin/user/logout')}">退出</a></dd>
         </dl>
       </li>
-      <li class="layui-nav-item to-index"><a href="/">前台首页</a></li>
+      <li class="layui-nav-item to-index"><a href="javascript:;">前台首页</a></li>
     </ul>
 
   </div>
