--- a/application/admin/view/article/cate_index.html
+++ b/application/admin/view/article/cate_index.html
@@ -1,7 +1,7 @@
 {include file="public/head"}
     <body>
     <div class="x-body" >
-        <button class="layui-btn layui-btn-sm " onclick="x_admin_show('添加栏目','showAdd.html',500,460)"></i>添加栏目</button>
+        <button class="layui-btn layui-btn-sm " onclick="x_admin_show('添加栏目','cateAdd.html',500,460)"></i>添加栏目</button>
         <button onclick="javascript:location.reload()" class="layui-btn layui-btn-sm">刷新</button>
         <span class="x-right" style="line-height:40px">共有数据:<i class="i_count">{$count}</i>条</span>
 
@@ -22,7 +22,7 @@
                                 </td>
                                 <td> <!--<button type="button" class="btn btn-success">添加子栏目</button> <button type="button" class="btn btn-primary">编辑</button> <button type="button" class="btn btn-danger" onClick="delcfm('{:url(\'admin/menu/del\',[\'id\' => $vo[\'id\']])}','{$vo.title}')">删除</button>-->
                                     <button type="button" onclick="x_admin_show('编辑栏目',
-                                    'showEdit.html?id={$vo.id}',500,460)" class="layui-btn layui-btn-xs">编辑
+                                    'cateEdit.html?id={$vo.id}',500,460)" class="layui-btn layui-btn-xs">编辑
                                     </button>
                                     <button type="button" onClick="deleteAuthRule({$vo.id})" class="layui-btn layui-btn-xs layui-btn-danger">删除</button>
                                 </td>
@@ -44,7 +44,7 @@ function deleteAuthRule(id){
           btn: ['确定','取消'] //按钮
         }, function(){
             $.ajax({
-                url: 'delete',
+                url: 'deleteCate',
                 type: 'post',
                 dataType: 'json',
                 data: {id:id},
