分站管理--修改分站

--- a/application/admin/view/branch/edit.html
+++ b/application/admin/view/branch/edit.html
@@ -43,7 +43,7 @@
 					<select name="county" lay-filter="county" id="county" lay-verify="required">
                         <option value="">请选择区/县</option>
                         {volist name='county' id='vo'}
-						<option value="{$vo.region_code}" {if condition="$vo.region_code == $data.county"}selected{/if}>{$vo.region_name}</option>
+						<option value="{$vo.region_code}" {if condition="$vo.region_code == $data.county"}selected disabled{/if}>{$vo.region_name}</option>
 						{/volist}
 					</select>
 				</div>
