网站管理--基本设置

--- a/application/admin/view/system/set_edit.html
+++ b/application/admin/view/system/set_edit.html
@@ -22,44 +22,31 @@
 			<div class="layui-form-item">
 				<label class="layui-form-label">网站名称</label>
 				<div class="layui-input-block">
-					<input type="text" id="web_name" name="web_name" lay-verify="required|branch_name"
-						autocomplete="off" placeholder="请输入分站名称" value="{$data.web_name}" class="layui-input">
+					<input type="text" id="web_name" name="web_name" autocomplete="off" placeholder="请输入分站名称" value="{$data.web_name}" class="layui-input">
 				</div>
 			</div>
 			<div class="layui-form-item">
 				<label class="layui-form-label">网站网址</label>
 				<div class="layui-input-block">
-					<input type="text" id="web" name="web" value="{$data.web}" lay-verify="required|branch_pinyin"
-						autocomplete="off" placeholder="请输入拼音(用于分站域名前缀)" class="layui-input">
-				</div>
-			</div>
-			<div class="layui-form-item">
-				<label class="layui-form-label">网站秘钥</label>
-				<div class="layui-input-block">
-					<input type="text" id="secret" name="secret" value="{$data.secret}"
-						lay-verify="required|branch_pinyin" autocomplete="off" placeholder="请输入拼音(用于分站域名前缀)"
-						class="layui-input">
+					<input type="text" id="web" name="web" value="{$data.web}" autocomplete="off" placeholder="请输入拼音(用于分站域名前缀)" class="layui-input">
 				</div>
 			</div>
 			<div class="layui-form-item">
 				<label class="layui-form-label">联系邮箱</label>
 				<div class="layui-input-block">
-					<input type="text" id="email" name="email" value="{$data.email}" lay-verify="required|branch_pinyin"
-						autocomplete="off" placeholder="请输入拼音(用于分站域名前缀)" class="layui-input">
+					<input type="text" id="email" name="email" value="{$data.email}" autocomplete="off" placeholder="请输入拼音(用于分站域名前缀)" class="layui-input">
 				</div>
 			</div>
 			<div class="layui-form-item">
 				<label class="layui-form-label">客服QQ</label>
 				<div class="layui-input-block">
-					<input type="text" id="qq" name="qq" value="{$data.qq}" lay-verify="required|branch_pinyin"
-						autocomplete="off" placeholder="请输入拼音(用于分站域名前缀)" class="layui-input">
+					<input type="text" id="qq" name="qq" value="{$data.qq}" autocomplete="off" placeholder="请输入拼音(用于分站域名前缀)" class="layui-input">
 				</div>
 			</div>
 			<div class="layui-form-item">
 				<label class="layui-form-label">联系电话</label>
 				<div class="layui-input-block">
-					<input type="text" id="phone" name="phone" value="{$data.phone}" lay-verify="required|branch_pinyin"
-						autocomplete="off" placeholder="请输入拼音(用于分站域名前缀)" class="layui-input">
+					<input type="text" id="phone" name="phone" value="{$data.phone}" autocomplete="off" placeholder="请输入拼音(用于分站域名前缀)" class="layui-input">
 				</div>
 			</div>
 			<div class="layui-form-item logo">
@@ -87,8 +74,7 @@
 			<div class="layui-form-item">
 				<label class="layui-form-label">备案信息</label>
 				<div class="layui-input-block">
-					<input type="text" id="info" name="info" value="{$data.info}" lay-verify="required|branch_pinyin"
-						autocomplete="off" placeholder="请输入拼音(用于分站域名前缀)" class="layui-input">
+					<input type="text" id="info" name="info" value="{$data.info}" autocomplete="off" placeholder="请输入拼音(用于分站域名前缀)" class="layui-input">
 				</div>
 			</div>
 			<input type="hidden" value="{$data.id}" name="id">
