--- a/application/admin/view/article/article_edit.html
+++ b/application/admin/view/article/article_edit.html
@@ -6,9 +6,6 @@
             color: black;
         }
 
-        #thumb {
-            display: none;
-        }
         .layui-upload-img{
 			width: auto;
 			height: 60px;
@@ -21,7 +18,7 @@
                 <label class="layui-form-label">文章标题</label>
                 <div class="layui-input-block">
                     <input autocomplete="off" class="layui-input" lay-verify="required" name="title"
-                        placeholder="请输入文章标题" type="text" />
+                        placeholder="请输入文章标题" type="text" value="{$article.title}" />
                 </div>
             </div>
             <div class="layui-form-item">
@@ -30,7 +27,7 @@
                     <select lay-filter="aihao" name="cate_id" id='cate_id' lay-verify="required">
                         <option value="">请选择栏目</option>
                         {volist name='cate' id='vo'}
-                        <option value="{$vo.id}">{$vo.level-1|str_repeat='丨--',###}{$vo.title}</option>
+                        <option value="{$vo.id}" {if condition="$vo.id == $article.cate_id"}selected{/if}>{$vo.level-1|str_repeat='丨--',###}{$vo.title}</option>
                         {/volist}
                     </select>
                 </div>
@@ -39,21 +36,21 @@
                 <label class="layui-form-label">关&nbsp;键&nbsp;&nbsp;词</label>
                 <div class="layui-input-block">
                     <input autocomplete="off" class="layui-input" lay-verify="required" name="keywords"
-                        placeholder="请输入关键词" type="text" />
+                        placeholder="请输入关键词" type="text" value="{$article.keywords}" />
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">文章简介</label>
                 <div class="layui-input-block">
                     <input autocomplete="off" class="layui-input" lay-verify="required" name="desc"
-                        placeholder="请输入文章简介" type="text" />
+                        placeholder="请输入文章简介" type="text" value="{$article.desc}" />
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">文章内容</label>
                 <div class="layui-input-block">
                     <textarea class="layui-textarea" placeholder="请输入文章内容" id="notice" name="content"
-                        style="width: 100%;height: 400px;"></textarea>
+                        style="width: 100%;height: 400px;">{$article.content}</textarea>
                 </div>
             </div>
             <div class="layui-form-item">
@@ -62,17 +59,18 @@
                     <button type="button" class="layui-btn upload-img">
                         <i class="layui-icon">&#xe67c;</i>缩略图
                     </button>
-                    <img class="layui-upload-img" id="thumb" src="">
+                    <img class="layui-upload-img" id="thumb" src="__public__{$article.thumb}">
                 </div>
             </div>
             <div class="layui-form-item">
                 <label class="layui-form-label">排序</label>
                 <div class="layui-input-block">
                     <input autocomplete="off" class="layui-input" lay-verify="required" name="sort"
-                        placeholder="排序数值越大排列越靠前" type="text" value="0" />
+                        placeholder="排序数值越大排列越靠前" type="text" value="{$article.sort}" />
                 </div>
             </div>
-            <input type="hidden" name="thumb" value="" />
+            <input type="hidden" name="thumb" value="{$article.thumb}" />
+            <input type="hidden" name="id" value="{$article.id}" />
             <div class="layui-form-item">
                 <div class="layui-input-block">
                     <button class="layui-btn" lay-filter="toSubmit" lay-submit="" style="margin-left: 33%">提交</button>
@@ -97,6 +95,7 @@
         var form = layui.form,layer = layui.layer,upload = layui.upload;
         form.on('submit(toSubmit)', function (data) {
             var params = {
+                id:data.field.id,
 				title: data.field.title,
 				cate_id: data.field.cate_id,
 				keywords: data.field.keywords,
@@ -105,10 +104,10 @@
 				sort: data.field.sort,
 				content: data.field.content,
 			};
-			$.post('/admin/article/addArticle', params, function (data) {
+			$.post('/admin/article/editArticle', params, function (data) {
 				var res = data.data;
 				if (data.code == 200) {
-					layer.msg('添加成功', {
+					layer.msg('修改成功', {
 						icon: 1,
 						time: 1000
 					}, function () {
@@ -116,7 +115,7 @@
 						parent.location.reload();
 					});
 				} else {
-					layer.msg('添加失败', {
+					layer.msg('修改失败', {
 						icon: 1,
 						time: 1000
 					}, function () {
