会员管理-等级管理，分类管理

--- a/application/admin/view/article/article_edit.html
+++ b/application/admin/view/article/article_edit.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">排序</label>
+                <label class="layui-form-label">排&nbsp;&nbsp;&nbsp;&nbsp;序</label>
                 <div class="layui-input-block">
                     <input autocomplete="off" class="layui-input" lay-verify="required" name="sort"
                         placeholder="排序数值越大排列越靠前" type="text" value="{$article.sort}" />
