--- a/application/admin/view/article/cate_add.html
+++ b/application/admin/view/article/cate_add.html
@@ -48,9 +48,7 @@
             </div>
 
             <div class="layui-form-item">
-                <label class="layui-form-label">
-                    排序
-                </label>
+                <label class="layui-form-label">排&nbsp;&nbsp;&nbsp;&nbsp;序</label>
                 <div class="layui-input-block">
                     <input autocomplete="off" class="layui-input" id="sort"  lay-verify="required" name="sort" placeholder="排序数值越大排列越靠前" type="text" value="0">
                     </input>
