--- a/application/admin/view/member/rank_add.html
+++ b/application/admin/view/member/rank_add.html
@@ -18,49 +18,28 @@
     <div class="x-body">
         <div class="layui-form" id="mainForm" style="margin-right: 20px;">
             <div class="layui-form-item">
-                <label class="layui-form-label">文章标题</label>
+                <label class="layui-form-label">等级标题</label>
                 <div class="layui-input-block">
                     <input autocomplete="off" class="layui-input" lay-verify="required" name="title"
-                        placeholder="请输入文章标题" type="text" />
+                        placeholder="请输入等级标题" type="text" />
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">所属栏目</label>
+                <label class="layui-form-label">所属分类</label>
                 <div class="layui-input-block">
-                    <select lay-filter="aihao" name="cate_id" id='cate_id' lay-verify="required">
-                        <option value="">请选择栏目</option>
-                        {volist name='cate' id='vo'}
-                        <option value="{$vo.id}">{$vo.level-1|str_repeat='丨--',###}{$vo.title}</option>
+                    <select lay-filter="aihao" name="rank_type" id='rank_type' lay-verify="required">
+                        <option value="">请选择分类</option>
+                        {volist name='type' id='vo'}
+                        <option value="{$vo.id}">{$vo.type_title}</option>
                         {/volist}
                     </select>
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">关&nbsp;键&nbsp;&nbsp;词</label>
-                <div class="layui-input-block">
-                    <input autocomplete="off" class="layui-input" lay-verify="required" name="keywords"
-                        placeholder="请输入关键词" type="text" />
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">文章简介</label>
-                <div class="layui-input-block">
-                    <input autocomplete="off" class="layui-input" lay-verify="required" name="desc"
-                        placeholder="请输入文章简介" type="text" />
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">文章内容</label>
-                <div class="layui-input-block">
-                    <textarea class="layui-textarea" placeholder="请输入文章内容" id="notice" name="content"
-                        style="width: 100%;height: 400px;"></textarea>
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">缩&nbsp;略&nbsp;&nbsp;图</label>
+                <label class="layui-form-label">图&nbsp;&nbsp;&nbsp;&nbsp;标</label>
                 <div class="layui-input-block" style="display: flex;">
                     <button type="button" class="layui-btn upload-img">
-                        <i class="layui-icon">&#xe67c;</i>缩略图
+                        <i class="layui-icon">&#xe67c;</i>图标
                     </button>
                     <img class="layui-upload-img" id="thumb" src="">
                 </div>
@@ -82,30 +61,17 @@
     </div>
 </body>
 {include file='public/foot'}
-<script type="text/javascript" src="__static__/kindeditor/kindeditor-all.js"></script>
-<script type="text/javascript" src="__static__/kindeditor/lang/zh-CN.js"></script>
 <script type="text/javascript">
-    KindEditor.ready(function (K) {
-        notice = K.create('#notice', {
-            uploadJson: '/api/file/upload?type=article',
-            afterBlur: function(){
-                this.sync();
-            }
-        });
-    });
     layui.use(['form', 'layer', 'upload'], function () {
         var form = layui.form,layer = layui.layer,upload = layui.upload;
         form.on('submit(toSubmit)', function (data) {
             var params = {
 				title: data.field.title,
-				cate_id: data.field.cate_id,
-				keywords: data.field.keywords,
-				desc: data.field.desc,
 				thumb: data.field.thumb,
+                rank_type:data.field.rank_type,
 				sort: data.field.sort,
-				content: data.field.content,
 			};
-			$.post('/admin/article/addArticle', params, function (data) {
+			$.post('/admin/member/addRank', params, function (data) {
 				var res = data.data;
 				if (data.code == 200) {
 					layer.msg('添加成功', {
@@ -116,19 +82,16 @@
 						parent.location.reload();
 					});
 				} else {
-					layer.msg('添加失败', {
-						icon: 1,
+					layer.msg(data.msg, {
+						icon: 5,
 						time: 1000
-					}, function () {
-						x_admin_close();
-						parent.location.reload();
 					});
 				}
 			}, 'json');
         });
         var uploadInst = upload.render({
             elem: '.upload-img',
-            url: '/api/file/upload?type=thumb',
+            url: '/api/file/upload?type=logo',
             accept: 'file', // 允许上传的文件类型
             field: 'imgFile',
             auto: true, // 自动上传
