--- a/application/admin/view/member_rank/index.html
+++ b/application/admin/view/member_rank/index.html
@@ -11,8 +11,8 @@
                 <button class="layui-btn  layui-btn-sm layui-btn-danger" lay-event="getCheckData">
                     <i class="layui-icon layui-icon-delete"></i>批量删除
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加类别','typeAdd.html',600,200)">
-                    <i class="layui-icon layui-icon-add-circle-fine"></i>添加类别
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加等级','add.html',800,500)">
+                    <i class="layui-icon layui-icon-add-circle-fine"></i>添加等级
                 </button>
             </div>
         </script>
@@ -30,7 +30,7 @@
             elem: '#demo'
             , toolbar: '#toolbarDemo'
             , defaultToolbar: []
-            , url: '/admin/member/type_ajax' //数据接口
+            , url: '/admin/member_rank/rank_ajax' //数据接口
             , page: true //开启分页
             , limit: 20
             , id: 'test'
@@ -38,43 +38,19 @@
                 [ //表头
                     { type: 'checkbox', fixed: 'left' }
                     , { field: 'id', title: 'ID', width: '5%', fixed: 'left' }
-                    , { field: 'type_title', title: '类别名称' }
+                    , { field: 'rank_name', title: '等级标题' }
+                    , { field: 'create_time', title: '创建时间', width: '15%', }
+                    , { field: 'rank_sort', title: '排序', width: '15%', }
                     , {
-                        field: 'status', title: '类别状态', width: '15%', 
+                        field: 'handle', title: '操作', width: '15%',
                         templet: function (d) {
-                            if(d.status == 0){
-                                var can_used = '正常';
-                            }else{
-                                var can_used = '<font color="red">已删</font>';
-                            }
-                            return can_used;
-                        }
-                    }
-                    , { field: 'create_time', title: '创建时间', width: '15%' }
-                    , {
-                        field: 'handle', title: '操作',width: '10%',
-                        templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
+                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑等级\',\'/admin/member_rank/edit?id=' + d.id + '\',800,480);">编辑</button>' +
+                                '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
                             return handle;
                         }
                     }
                 ]
             ]
-        });
-        /**
-         * 监听状态改变
-        */
-        form.on('switch(cc)', function (data) {
-            var t = data.elem;
-            var branch_id = $(t).attr('data-user-id');
-            $.post('/admin/type/updateStatus', { id: branch_id }, function (j) {
-                if (j.code == '200') {
-                    layer.msg('设置成功');
-                }
-                if (j.code == '0') {
-                    layer.msg('设置失败');
-                }
-            },'json');
         });
     });
     function delAll(argument) {
@@ -87,13 +63,13 @@
     }
     function delUser(id) {
         layer.confirm('确认要删除吗？', function (index) {
-            $.post('/admin/type/deleteType', { id: id }, function (j) {
+            $.post('/admin/member_rank/delete', { id: id }, function (j) {
                 if(j.code == 200){
                     layer.msg('删除成功', { icon: 1, time: 1000 }, function () {
                         location.reload();
                     });
                 }else{
-                    layer.msg('删除失败', { icon: 5, time: 1000 });
+                    layer.msg('删除失败', { icon: 2, time: 1000 });
                 }
             },'json');
         });
