--- a/application/admin/view/member_type/edit.html
+++ b/application/admin/view/member_type/edit.html
@@ -12,9 +12,10 @@
                 <label class="layui-form-label">类别名称</label>
                 <div class="layui-input-block">
                     <input autocomplete="off" class="layui-input" lay-verify="required" name="type_title"
-                        placeholder="请输入类别名称" type="text" />
+                        placeholder="请输入类别名称" type="text" value="{$data.type_title}" />
                 </div>
             </div>
+            <input type="hidden" name="id" value="{$data.id}" />
             <div class="layui-form-item">
                 <div class="layui-input-block">
                     <button class="layui-btn" lay-filter="toSubmit" lay-submit="" style="margin-left: 33%">提交</button>
@@ -29,12 +30,13 @@
         var form = layui.form,layer = layui.layer,upload = layui.upload;
         form.on('submit(toSubmit)', function (data) {
             var params = {
+                id:data.field.id,
 				type_title: data.field.type_title,
 			};
-			$.post('/admin/member/addType', params, function (data) {
+			$.post('/admin/member_type/editType', params, function (data) {
 				var res = data.data;
 				if (data.code == 200) {
-					layer.msg('添加成功', {
+					layer.msg('修改成功', {
 						icon: 1,
 						time: 1000
 					}, function () {
