修改地区三级联动bug

--- a/application/admin/view/branch/search.html
+++ b/application/admin/view/branch/search.html
@@ -102,6 +102,7 @@
         form.on('select(city)',function(data){
             $.post('/api/region/index', { 
                 code: data.value,
+                is_open:2,
                 type:2 
             }, function(data){
                 var res = data.data;
