--- a/application/admin/view/community/search.html
+++ b/application/admin/view/community/search.html
@@ -104,7 +104,8 @@
 	form.on('select(city)',function(data){
         $.post('/api/region/index', { 
             code: data.value,
-            type:2 
+            type:2 ,
+            is_open:2
         }, function(data){
             var res = data.data;
             if(data.code == 0){
