--- a/application/admin/view/building/log.html
+++ b/application/admin/view/building/log.html
@@ -11,8 +11,8 @@
                 <button class="layui-btn  layui-btn-sm layui-btn-danger" onclick="delAll()">
                     <i class="layui-icon layui-icon-delete"></i>批量删除
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加工地','buildingAdd.html',800,500)">
-                    <i class="layui-icon layui-icon-add-circle-fine"></i>添加工地
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加日记','logAdd.html?id='+{$id},800,500)">
+                    <i class="layui-icon layui-icon-add-circle-fine"></i>添加日记
                 </button>
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
                     <i class="layui-icon layui-icon-refresh"></i>刷新
@@ -29,6 +29,7 @@
     var tableIns;
     layui.use(['laydate', 'form', 'table'], function () {
         var table = layui.table, laydate = layui.laydate, form = layui.form;
+        var id = {$id};
         /**
          * 请求数据
         */
@@ -36,7 +37,7 @@
             elem: '#demo'
             , toolbar: '#toolbarDemo'
             , defaultToolbar: []
-            , url: '/admin/building/index_list' //数据接口
+            , url: '/admin/building/buildingLogList?id='+id //数据接口
             , page: true //开启分页
             , limit: 20
             , id: 'test'
@@ -44,16 +45,14 @@
                 [ //表头
                     { type: 'checkbox', fixed: 'left' }
                     , { field: 'id', title: 'ID', width: '5%', fixed: 'left' }
-                    , { field: 'city', title: '城市', width: '15%' }
-                    , { field: 'village_name', title: '小区名称', width: '15%' }
-                    , { field: 'area', title: '面积', width: '15%', }
-                    , { field: 'price', title: '价格', width: '15%', }
+                    , { field: 'title', title: '日记标题', width: '15%' }
                     , { field: 'speed_name', title: '进度', width: '15%', }
+                    , { field: 'create_time', title: '创建时间', width: '15%' }
                     , {
                         field: 'handle', title: '操作',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'工地日记\',\'/admin/building/buildingLog?id=' + d.id + '\',null,null);">工地日记</button>' +'<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑工地\',\'/admin/building/buildingEdit?id=' + d.id + '\',800,480);">编辑</button>' +
-                                '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delBuilding(' + d.id + ');">删除</button>';
+                            var handle = '<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'编辑工地\',\'/admin/building/logEdit?id=' + d.id +'&village_id=' + id + '\',800,480);">编辑</button>' +
+                                '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delLog(' + d.id + ');">删除</button>';
                             return handle;
                         }
                     }
@@ -74,7 +73,7 @@
             // return false;
             //捉到所有被选中的，发异步进行删除
             delList = JSON.stringify( delList )
-            $.post('/admin/building/delAll', { delList: delList }, function (j) {
+            $.post('/admin/building/delLogAll', { delList: delList }, function (j) {
                     if(j.code == 200){
                         layer.msg('操作成功', { icon: 1, time: 1000 }, function () {
                         location.reload();
@@ -85,9 +84,9 @@
                 },'json');
         });
     }
-    function delBuilding(id) {
+    function delLog(id) {
         layer.confirm('确认要删除吗？', function (index) {
-            $.post('/admin/building/delBuilding', { id: id }, function (j) {
+            $.post('/admin/building/delLog', { id: id }, function (j) {
                 if(j.code == 200){
                     layer.msg('删除成功', { icon: 1, time: 1000 }, function () {
                         location.reload();
