--- a/application/admin/view/auth/index.html
+++ b/application/admin/view/auth/index.html
@@ -3,13 +3,11 @@
     <div class="x-body" >
         <button class="layui-btn layui-btn-sm " onclick="x_admin_show('添加菜单','showAdd.html',500,460)"></i>添加菜单</button>
         <button onclick="javascript:location.reload()" class="layui-btn layui-btn-sm">刷新</button>
-        <span class="x-right" style="line-height:40px">共有数据:10条</span>
-
     <table class="layui-table">
         <thead>
           <tr>
             <th>ID</th>
-            <th>权限名称</th>
+            <th>菜单名称</th>
             <th>控制器方法</th>
             <th>图标</th>
             <th>状态</th>
