--- a/application/admin/view/goods_cate/cate_add.html
+++ b/application/admin/view/goods_cate/cate_add.html
@@ -10,11 +10,11 @@
             
             <div class="layui-form-item">
                 <label class="layui-form-label">
-                    上级栏目
+                    上级分类
                 </label>
                 <div class="layui-input-block">
                     <select lay-filter="aihao" name="pid" id='pid'>
-                        <option value="0">顶级栏目
+                        <option value="0">顶级分类
                         </option>
                          {volist name='auth' id='vo'}
                                 <option value="{$vo.id}">{$vo.level-1|str_repeat='丨--',###}{$vo.title}</option>
@@ -25,10 +25,10 @@
 
             <div class="layui-form-item">
                 <label class="layui-form-label">
-                    栏目名称
+                    分类名称
                 </label>
                 <div class="layui-input-block">
-                    <input autocomplete="off" class="layui-input" id="title" lay-verify="required" name="title" placeholder="请输入栏目名称" type="text">
+                    <input autocomplete="off" class="layui-input" id="title" lay-verify="required" name="title" placeholder="请输入分类名称" type="text">
                     </input>
                 </div>
             </div>
@@ -119,6 +119,7 @@
 	    $('#mainForm').ajaxForm(options).submit(function(data){
 	    	//无逻辑
 	    }); 
+
 	});
 </script>
 </html>
