--- a/application/admin/view/goods_cate/cate_child.html
+++ b/application/admin/view/goods_cate/cate_child.html
@@ -2,47 +2,41 @@
 <body>
     <style media="screen" type="text/css">
         header {
-    color: black;
-}
+            color: black;
+        }
     </style>
     <div class="x-body">
-        <form action="addCate" class="layui-form" id="mainForm" method="post" style="margin-right: 20px;">
-            
+        <form action="addCateChild" class="layui-form" id="mainForm" method="post" style="margin-right: 20px;">
+            <input type="hidden" name='pid' value="{$pid}">
             <div class="layui-form-item">
                 <label class="layui-form-label">
-                    上级栏目
+                    上级分类
                 </label>
                 <div class="layui-input-block">
-                    <select lay-filter="aihao" name="pid" id='pid'>
-                        <option value="0">顶级栏目
-                        </option>
-                         {volist name='auth' id='vo'}
-                                <option value="{$vo.id}">{$vo.level-1|str_repeat='丨--',###}{$vo.title}</option>
-                         {/volist}
+                    <select lay-filter="aihao" name="pid" id='pid' disabled="disabled">
+                        <option value="">{$p_title}</option>
                     </select>
                 </div>
             </div>
 
             <div class="layui-form-item">
                 <label class="layui-form-label">
-                    栏目名称
+                    分类名称
                 </label>
                 <div class="layui-input-block">
-                    <input autocomplete="off" class="layui-input" id="title" lay-verify="required" name="title" placeholder="请输入栏目名称" type="text">
+                    <input autocomplete="off" value="" class="layui-input" id="title" lay-verify="required" name="title" placeholder="请输入分类名称" type="text">
                     </input>
                 </div>
             </div>
-
             <div class="layui-form-item">
                 <label class="layui-form-label">
                     状态
                 </label>
                 <div class="layui-input-block">
-                     <select name="status" id='status' lay-filter="aihao" name="interest">
-                        <option value="1" >显示
-                        </option>
-                          <option value="0" >隐藏
-                        </option>
+                  
+                     <select name="status" id='status' value="" lay-filter="aihao" name="interest">
+                        <option value="1">显示</option>
+                        <option value="0">隐藏</option>
                     </select>
                 </div>
             </div>
@@ -50,7 +44,7 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">排&nbsp;&nbsp;&nbsp;&nbsp;序</label>
                 <div class="layui-input-block">
-                    <input autocomplete="off" class="layui-input" id="sort"  lay-verify="required" name="sort" placeholder="排序数值越大排列越靠前" type="text" value="0">
+                    <input autocomplete="off" value="0" class="layui-input" id="sort"  lay-verify="required" name="sort" placeholder="排序数值越大排列越靠前" type="text" value="0">
                     </input>
                 </div>
             </div>
@@ -60,7 +54,7 @@
                     <button class="layui-btn"  lay-filter="toSubmit" lay-submit=""  style="margin-left: 33%">
                         提交
                     </button>
-                    <button style="display: none;" class="layui-btn layui-btn-primary" id="reset" type="reset">
+                     <button style="display: none;" class="layui-btn layui-btn-primary" id="reset" type="reset">
                         重置
                     </button>
                 </div>
@@ -71,23 +65,18 @@
 </body>
 {include file='public/foot'}
 <script type="text/javascript">
+    // $("#status").val(0);
 	var form = layui.form;
 	var layer = layui.layer;
-      //自定义验证规则
-      form.verify({
-        title: function(value){
-          if(value.length < 3){
-            return '标题至少得2个字符啊';
-          }
-        }
-      });
-	//监听提交
-	// form.on('submit(demo1)', function(data){
-	//       layer.alert(JSON.stringify(data.field), {
-	//       title: '最终的提交信息'
-	//     })
-	//     return false;
-	//   });
+			  //自定义验证规则
+			  form.verify({
+			    title: function(value){
+			      if(value.length < 3){
+			        return '标题至少得2个字符啊';
+			      }
+			    }
+			  });
+		//监听提交
 	$(document).ready(function(){ 
 	     var options = {
 		      type:'post',           //post提交
@@ -119,6 +108,7 @@
 	    $('#mainForm').ajaxForm(options).submit(function(data){
 	    	//无逻辑
 	    }); 
+
 	});
 </script>
 </html>
