--- a/application/admin/view/goods_cate/cate_index.html
+++ b/application/admin/view/goods_cate/cate_index.html
@@ -2,7 +2,7 @@
 
 <body>
     <div class="x-body">
-        <button class="layui-btn layui-btn-sm " onclick="x_admin_show('添加栏目','cateAdd.html',500,460)"></i>添加栏目</button>
+        <button class="layui-btn layui-btn-sm " onclick="x_admin_show('添加分类','cateAdd.html',500,460)"></i>添加分类</button>
         <button onclick="javascript:location.reload()" class="layui-btn layui-btn-sm">刷新</button>
         <span class="x-right" style="line-height:40px">共有数据:<i class="i_count">{$count}</i>条</span>
 
@@ -10,7 +10,7 @@
             <thead>
                 <tr>
                     <th>ID</th>
-                    <th>栏目名称</th>
+                    <th>分类名称</th>
                     <th>状态</th>
                     <th>排序</th>
                     <th>操作</th>
@@ -25,8 +25,9 @@
                     </td>
                     <td>{$vo.sort}</td>
                     <td>
-                        <!--<button type="button" class="btn btn-success">添加子栏目</button> <button type="button" class="btn btn-primary">编辑</button> <button type="button" class="btn btn-danger" onClick="delcfm('{:url(\'admin/menu/del\',[\'id\' => $vo[\'id\']])}','{$vo.title}')">删除</button>-->
-                        <button type="button" onclick="x_admin_show('编辑栏目',
+                        <button type="button" onclick="x_admin_show('添加分类',
+                        'addChildCate.html?id={$vo.id}',500,460)" class="layui-btn layui-btn-normal layui-btn-xs">+子类</button><!-- <button type="button" class="btn btn-primary">编辑</button> <button type="button" class="btn btn-danger" onClick="delcfm('{:url(\'admin/menu/del\',[\'id\' => $vo[\'id\']])}','{$vo.title}')">删除</button>-->
+                        <button type="button" onclick="x_admin_show('编辑分类',
                                     'cateEdit.html?id={$vo.id}',500,460)" class="layui-btn layui-btn-xs">编辑
                         </button>
                         <button type="button" onClick="deleteAuthRule({$vo.id})"
